--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body
 #header
 {
     height: 100vh;
-    background: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)), url(img/bg.jpg);
+    background: url(img/bg.jpg);
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
